environment/stage/first-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    env: development
