environment/stage/first-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  namespace: argocd
spec:
  strategy:
    type: Recreate
  replicas: 4
  selector: 
    matchLabels:
      type: app
  template:
    metadata:
      name: mydp 
      labels:
        type: app
    spec:
      containers:
        - name: co1
          image: nginx
      # resources:
      # requests:
      #   memory: 10Mi
      #   cpu: 10M
      # limits: 
      #   memory: 30M
      #   cpu: 200M
