environment/stage/first-app/service.yml
apiVersion: apps/v1
kind: Service 
metadata:
  name: mginx-service
  labels: 
    app: nginx 
spec:
